--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -10,18 +10,29 @@ body {
 
 .container {
   max-width: 400px;
+  max-height: 900px;
+  min-height: 450px;
   margin: 100px auto;
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  align-content: center;
+  justify-content: center;
 }
 
-h2 {
-  text-align: center;
-  margin-bottom: 30px;
+.logo {
+  font-size: 30px;
+  font-weight: bold;
   color: #333;
+  text-decoration: none;
 }
+
+.logo:hover {
+  text-decoration: underline; /* Adicionar sublinhado ao passar o mouse */
+}
+
+
 
 label, input {
   display: block;
@@ -31,12 +42,14 @@ label, input {
 
 input[type="text"], input[type="password"], input[type="email"] {
   width: 100%;
+  max-width: 90%;
   padding: 10px;
   border: none;
   border-bottom: 1px solid #ccc;
   background-color: transparent;
   color: #333;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus {
@@ -49,6 +62,29 @@ header {
   background-color: #69a6e2;
   color: #fff;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 24px;
+}
+
+h2 {
+  flex-grow: 1;
+  left: 80%;
+  text-align: center;
+  margin: 0;
+}
+.title{
+  position: absolute;
+  left: 50%;
+  right: 50%;
+}
+
+.expansor {
+  flex-grow: 1;
 }
 
 /* Estilos da navbar */
@@ -56,6 +92,9 @@ nav {
   padding: 10px;
   border-bottom-style: groove;
   border-bottom-color: #333333;
+  display: flex;
+  justify-content: flex-end; /* Alinhar à direita */
+  align-items: center;
 }
 
 nav ul {
@@ -72,10 +111,97 @@ nav ul li {
 nav ul li a {
   color: #ffffff;
   text-decoration: none;
+  position: relative;
 }
 
+nav ul li a:hover {
+  color: #ffcc00;
+}
+
+nav ul li a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: #ffcc00;
+  bottom: -2px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: width 0.3s ease-in-out;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+
+.button-login {
+  display: inline-block;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-inline: 10px;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.button-login:hover {
+  background-color: #ffcc00;
+  animation-name: shake;
+  animation-duration: 0.5s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.button-register {
+  color: #f2f2f2;
+  font-size: 20px;
+  text-decoration: none;
+  margin-inline: 10px;
+  padding: 10px 5px;
+}
+
+.button-register:hover {
+  color: #ffcc00;
+}
+
+.button-register::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: #ffcc00;
+  bottom: -2px;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: width 0.3s ease-in-out;
+}
+
+/* align center div*/
 .center {
+
   text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 /* estilo da foto de perfil */
@@ -102,6 +228,7 @@ nav ul li a {
   /* ... */
   position: relative;
 }
+
 
 #profile-image {
   /* ... */
@@ -134,6 +261,8 @@ nav ul li a {
   justify-content: center;
   line-height: 1;
 }
+
+
 /* estilo do login */
 .forgot-password-link {
   color: blue;
@@ -149,6 +278,16 @@ nav ul li a {
   font-weight: bold;
 }
 
+#login-page {
+  margin-top: 60px;
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
 /* Estilos do footer */
 footer {
   background-color: #333;
@@ -160,3 +299,4 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
